# contentflow

./: .env.example  .gitattributes  .gitignore  AI_ORCHESTRATOR_IMPLEMENTATION_REPORT.md  AUDIT_COMPLET_RAPPORT.md  AUTOMATED_SUPPORT_IMPLEMENTATION_REPORT.md  BYOP_AUTH_FIX_REPORT.md  Dockerfile  FONCTIONNALITES_CONTENTFLOW.md  Makefile  OPENAI_INTEGRATION_REPORT.md  PARTNER_AUTH_DEMO.md  PARTNER_EARNINGS_IMPLEMENTATION_REPORT.md  PIPELINE_DEMO_COMPLETE.md  PRODUCTION_UPGRADE_REPORT.md  Procfile  README.md  SERPAPI_DEMO_RESULTS.md  SERPAPI_INTEGRATION_REPORT.md  SUPABASE_MIGRATION_REPORT.md  SUPADATA_INTEGRATION_REPORT.md  SUPPORT_SYSTEM_DEMO.md  check_and_create_tables.ps1  check_db.py  check_db_connection.bat  check_db_file.py  check_postgres.py  check_runs.py  check_runs_table.py  check_tables.py  contentflow_pack.json  create_tables.sql  db_test.py  direct_db_check.py  direct_db_test.py  docker-compose.yml  init_db.py  package-lock.json  package.json  pyproject.toml  (+41 more)
app/: config.py  db.py  deps.py  main.py  models.py  schemas.py
attached_assets/: Pasted--Smoke-test-local-Replit-health-curl-sS-https-ton-repl-repl-co-healthz-cycle-manuel-cu-1755294949452_1755294949453.txt  Pasted-0-ENV-Config-append-only-env-example-append-PAYOUT-MIN-EUR-10-PAYOUT-METHODS-paypal-bank--1755336582321_1755336582323.txt  Pasted-0-ENV-append-env-example-FEATURE-BYOP-true-BYOP-DEFAULT-REVSHARE-PCT-0-40-SHARE-EMAIL-ENABLED--1755345623103_1755345623104.txt  Pasted-0-ENV-append-env-example-FEATURE-SUPPORTBOT-true-FEATURE-RISKBOT-true-TICKET-AUTO-CLOSE-DAYS-5-1755351439136_1755351439137.txt  (+11 more)
(+127 files in other folders)
